update simpler version